Updates from feedback

--- a/docker-compose/compose-secure.yml
+++ b/docker-compose/compose-secure.yml
@@ -3,7 +3,7 @@ name: service-platform
 services:
   servicecontrol:
     image: particular/servicecontrol:${SERVICECONTROL_TAG}
-    env_file: .env-secure
+    env_file: .env
     ports:
       - "33333:33333"
     environment:
@@ -14,11 +14,11 @@ services:
       SERVICECONTROL_HTTPS_CERTIFICATEPASSWORD: "${CERTIFICATE_PASSWORD}"
       SSL_CERT_FILE: "/etc/ssl/certs/ca-bundle.crt"
       SERVICECONTROL_AUTHENTICATION_ENABLED: "true"
-      SERVICECONTROL_AUTHENTICATION_AUTHORITY: "${SERVICECONTROL_AUTHENTICATION_AUTHORITY}"
-      SERVICECONTROL_AUTHENTICATION_AUDIENCE: "${SERVICECONTROL_AUTHENTICATION_AUDIENCE}"
-      SERVICECONTROL_AUTHENTICATION_SERVICEPULSE_CLIENTID: "${SERVICECONTROL_AUTHENTICATION_SERVICEPULSE_CLIENTID}"
-      SERVICECONTROL_AUTHENTICATION_SERVICEPULSE_AUTHORITY: "${SERVICECONTROL_AUTHENTICATION_AUTHORITY}/v2.0"
-      SERVICECONTROL_AUTHENTICATION_SERVICEPULSE_APISCOPES: '["${SERVICECONTROL_AUTHENTICATION_AUDIENCE}/access_as_user"]'
+      SERVICECONTROL_AUTHENTICATION_AUTHORITY: "${IDP_AUTHORITY}"
+      SERVICECONTROL_AUTHENTICATION_AUDIENCE: "${SERVICECONTROL_AUDIENCE}"
+      SERVICECONTROL_AUTHENTICATION_SERVICEPULSE_CLIENTID: "${SERVICEPULSE_CLIENTID}"
+      SERVICECONTROL_AUTHENTICATION_SERVICEPULSE_AUTHORITY: "${IDP_AUTHORITY}/v2.0"
+      SERVICECONTROL_AUTHENTICATION_SERVICEPULSE_APISCOPES: '${SERVICEPULSE_APISCOPES}'
     command: --setup-and-run
     restart: unless-stopped
     volumes:
@@ -47,7 +47,7 @@ services:
 
   servicecontrol-audit:
     image: particular/servicecontrol-audit:${SERVICECONTROL_TAG}
-    env_file: .env-secure
+    env_file: .env
     ports:
       - "44444:44444"
     environment:
@@ -58,8 +58,8 @@ services:
       SERVICECONTROL_AUDIT_HTTPS_CERTIFICATEPASSWORD: "${CERTIFICATE_PASSWORD}"
       SSL_CERT_FILE: "/etc/ssl/certs/ca-bundle.crt"
       SERVICECONTROL_AUDIT_AUTHENTICATION_ENABLED: "true"
-      SERVICECONTROL_AUDIT_AUTHENTICATION_AUTHORITY: "${SERVICECONTROL_AUTHENTICATION_AUTHORITY}"
-      SERVICECONTROL_AUDIT_AUTHENTICATION_AUDIENCE: "${SERVICECONTROL_AUTHENTICATION_AUDIENCE}"
+      SERVICECONTROL_AUDIT_AUTHENTICATION_AUTHORITY: "${IDP_AUTHORITY}"
+      SERVICECONTROL_AUDIT_AUTHENTICATION_AUDIENCE: "${SERVICECONTROL_AUDIENCE}"
     command: --setup-and-run
     restart: unless-stopped
     volumes:
@@ -79,15 +79,15 @@ services:
 
   servicecontrol-monitoring:
     image: particular/servicecontrol-monitoring:${SERVICECONTROL_TAG}
-    env_file: .env-secure
+    env_file: .env
     environment:
       MONITORING_HTTPS_ENABLED: "true"
       MONITORING_HTTPS_CERTIFICATEPATH: "/usr/share/ParticularSoftware/certificate.pfx"
       MONITORING_HTTPS_CERTIFICATEPASSWORD: "${CERTIFICATE_PASSWORD}"
       SSL_CERT_FILE: "/etc/ssl/certs/ca-bundle.crt"
       MONITORING_AUTHENTICATION_ENABLED: "true"
-      MONITORING_AUTHENTICATION_AUTHORITY: "${SERVICECONTROL_AUTHENTICATION_AUTHORITY}"
-      MONITORING_AUTHENTICATION_AUDIENCE: "${SERVICECONTROL_AUTHENTICATION_AUDIENCE}"
+      MONITORING_AUTHENTICATION_AUTHORITY: "${IDP_AUTHORITY}"
+      MONITORING_AUTHENTICATION_AUDIENCE: "${SERVICECONTROL_AUDIENCE}"
     restart: unless-stopped
     command: --setup-and-run
     ports:
